/**
 * This class was taken from Bumpers and adapted for SpaceInvaders
 */

package de.tum.in.ase.eist;

public class SpaceInvader {

    public static void main(String[] args) {
        // This is a workaround for a known issue when starting JavaFX applications
        SpaceInvaderApplication.startApp(args);
    }
}
